--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:seo": "vite build && node scripts/copy-sitemap.js",
+    "generate:sitemap": "node scripts/copy-sitemap.js"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@unhead/vue": "^2.0.10",
+    "@vueuse/head": "^2.0.0",
     "axios": "^1.7.9",
     "emailjs-com": "^3.2.0",
     "gsap": "^3.12.5",
