--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && node scripts/copy-sitemap.js",
     "preview": "vite preview",
     "build:seo": "vite build && node scripts/copy-sitemap.js",
     "generate:sitemap": "node scripts/copy-sitemap.js"
